Changes for 4.2.0alpha2

New features:
..F....PS. [ZBXNEXT-2315] implemented content matching in web monitoring headers (talbergs, vso)

Bug fixes:
..F....... [ZBX-13673] fixed regexp validation when pattern contain slash character (gcalenko)
....I....T [ZBX-13773] fixed naming inconsistencies in agent template, added more trigger descriptions in proxy and server templates (kalimulin)
..F....... [ZBX-14528] fixed incorrect keycode handling in multiselect input fields (miks)
A.F....... [ZBX-15124] fixed trigger overview behavior when show "any" (vasilijs)
A......... [ZBX-14648] fixed performance with deletion of item in template linked to many hosts (Sasha)
.......PS. [ZBX-9011] added new LLD macros for vmware HV low-level discovery (MVekslers)
..F....... [ZBX-15105] fixed colorpicker tooltip update (talbergs)
A.F....... [ZBX-14928] fixed "check now" being executed for active items and templates (talbergs)
..F....... [ZBX-15153] fixed custom interval validation; fixed parsing of custom intervals when user macros context contains forward slash (Ivo, miks)
.......PS. [ZBX-9038] fixed memory of performance counters consumed during vmware update (MVekslers)
....I....T [ZBX-8383] updated Tomcat template for compatibility with recent Tomcat versions (kalimulin)
A......... [ZBX-15078] fixed API authentication for ldap users having gui access disabled (gcalenko)
A.F....... [ZBX-14880] fixed misleading ldap authentication error messages (gcalenko)
..F....... [ZBX-14877] fixed style of disabled action on high contrast theme (Andzs, ashubin)
..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
..F....... [ZBX-15020] fixed negative time selector offset when selecting time range in graph (miks)
A......... [ZBX-14977] fixed creation of unneeded database record if host prototype inventory mode is disabled; fixed validation for host and host prototype inventory mode (miks)